feat: 쿼리 스트링이 없을 시 디폴트 값이 적용되도록 수정 및 컨트롤러 분기 삭제